--- a/_layouts/html5.html
+++ b/_layouts/html5.html
@@ -47,7 +47,7 @@
       <li>
         <span class="left">&nbsp;</span>
         <span class="centre">v</span>
-        <span class="right">&nbsp;</span>
+        <span class="right">vvvv...?</span>
       </li>
       <li>
         <a href="http://www.linkedin.com/pub/david-hu/24/b95/431">
