--- a/css/style.css
+++ b/css/style.css
@@ -201,28 +201,33 @@ table { border-collapse: collapse; border-spacing: 0; }
 
 
 body {
-  border-top: 8px solid #2B6CA9;
   color: #111;
   font-size: 1.1em;
-  background-color: #F5F5F5;
 }
+
 #container {
-  margin: 50px auto;
+  margin: 80px auto;
   width: 1000px;
 }
+
 a, a:visited {
-  color: #2B6CA9;
+  color: #4082C3;
   text-decoration: none;
 }
+
 a:hover {
   text-decoration: underline;
 }
-h1 {
+
+h1, h1 a, h1 a:visited {
   font-family:"Lucida Grande", Helvetica, sans-serif;
   margin-top: 0;
   padding-top: 0;
-  font-size: 2em;
+  color: #111;
+  font-size: 1.6em;
+  text-shadow: #CCC 1px 1px 2px;
 }
+
 p.meta {
   color: #666;
   letter-spacing: 0.1em;
@@ -230,56 +235,58 @@ p.meta {
   font-size: 0.9em;
   margin-top: -1.5em;
 }
-/*a:visited {*/
-  /*color: #425C69;*/
-/*}*/
+
 nav {
   display: block;
   float: right;
-  font-family: "Consolas", "Bitstream Vera Sans Mono", "Courier New", "Lucida Console", monospace;
-  font-size: 1.2em;
-  color: #555;
-  /*border-left: 1px dashed #2B6CA9;*/
+  font-family: "Lucida Grande", Helvetica, san-serif;
+  font-size: 1.5em;
   padding-left: 10px;
 }
+
 nav li {
   clear: both;
-  line-height: 1.7;
+  line-height: 2;
 }
-nav .left, nav .right {
-  background-color: inherit;
-  /*top: 0.5em;*/
-  position: relative;
-  float: left;
+
+nav, nav a, nav a:visited {
+  color: #999;
+  display: block;
 }
+
+nav a:hover {
+  border-top: 2px solid #333;
+  border-bottom: 2px solid #333;
+  text-decoration: none;
+  color: #4082C3;
+  margin-top: -2px;
+  margin-bottom: -2px;
+}
+
 nav .left {
-  width: 90px;
+  width: 85px;
   text-align: right;
-}
-nav .centre {
-  width: 0.8em;
-  text-align: center;
   float: left;
-  /*font-variant: small-caps;*/
+}
+
+nav .centre {
+  text-align: center;
+  width: 1em;
+  float: left;
   text-transform: uppercase;
   font-weight: bold;
-  /*font-size: 30px;*/
-  /*background-color: #CBE2FF;*/
-  color: #2B6CA9;
+  background-color: rgba(64,130, 195, 0.1);
+  color: #555;
 }
-nav a:hover {
-  background-color: #CBE2FF;
-  text-decoration: none;
-}
-nav .right {
-  text-align: left;
-}
+
 div#main {
   float: left;
   width: 690px;
   font-family: Palatino, Georgia, "Times New Roman", Times, serif;
   line-height: 1.5;
+  padding-right: 50px;
 }
+
 footer {
   clear: both;
 }
