change resume link to the pdf version

--- a/_layouts/html5.html
+++ b/_layouts/html5.html
@@ -72,7 +72,7 @@
         </a>
       </li>
       <li>
-        <a href="/resume">
+        <a href="/resume/resume.pdf">
           <span class="left">Res</span>
           <span class="centre">u</span>
           <span class="right">me</span>
