--- a/css/style.css
+++ b/css/style.css
@@ -255,10 +255,10 @@ nav, nav a, nav a:visited {
 }
 
 nav a:hover {
-  border-top: 2px solid #333;
-  border-bottom: 2px solid #333;
+  border-top: 2px solid #555;
+  border-bottom: 2px solid #555;
   text-decoration: none;
-  color: #4082C3;
+  color: #111;
   margin-top: -2px;
   margin-bottom: -2px;
 }
@@ -275,8 +275,13 @@ nav .centre {
   float: left;
   text-transform: uppercase;
   font-weight: bold;
-  background-color: rgba(64,130, 195, 0.1);
+  background-color: rgba(64, 130, 195, 0.1);
   color: #555;
+}
+
+nav a:hover .centre {
+  background-color: rgba(64, 130, 195, 0.2);
+  color: #000;
 }
 
 div#main {
