--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,9 @@ table { border-collapse: collapse; border-spacing: 0; }
  * nav grey: #555
  * light line: #999
  * background grey: FBFBFB
+ * TODO: Update this
+ * TODO: Divide into sections
+ * TODO: Learn Sass and Compass
  */
 
 
@@ -219,13 +222,17 @@ a:hover {
   text-decoration: underline;
 }
 
-h1, h1 a, h1 a:visited {
+h1 {
   font-family:"Lucida Grande", Helvetica, sans-serif;
   margin-top: 0;
   padding-top: 0;
   color: #111;
-  font-size: 1.6em;
+  font-size: 2.2em;
   text-shadow: #CCC 1px 1px 2px;
+}
+
+h1 a, h1 a:visited {
+  color: inherit;
 }
 
 p.meta {
