--- a/_layouts/html5.html
+++ b/_layouts/html5.html
@@ -7,13 +7,19 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>{{ page.title }}</title>
+  <title>
+    {% if page.title %}
+      {{ page.title }} | David Hu
+    {% else %}
+      David Hu
+    {% endif %}
+  </title>
+
 	<meta name="description" content="David Hu's website">
 	<meta name="author" content="David Hu">
 
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <!-- TODO: change addresses to /css ... -->
 	<link rel="stylesheet" href="/css/style.css">
 
   <!-- syntax highlighting CSS -->
