--- a/_layouts/html5.html
+++ b/_layouts/html5.html
@@ -4,8 +4,8 @@
 <!--[if IE 8]>    <html class="ie8 oldie" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!--> <html lang="en"> <!--<![endif]-->
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
   <title>
     {% if page.title %}
@@ -15,24 +15,25 @@
     {% endif %}
   </title>
 
-	<meta name="description" content="David Hu's website">
-	<meta name="author" content="David Hu">
+  <meta name="description" content="David Hu's website">
+  <meta name="author" content="David Hu">
 
-	<meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
-	<link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 
   <!-- syntax highlighting CSS -->
   <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
 
-	<script src="js/libs/modernizr-2.0.6.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+  <script src="/js/highcharts.js"></script>
 </head>
 <body>
 
 <div id="container">
-	<header>
+  <header>
 
-	</header>
+  </header>
 
   <nav>
     <ul>
@@ -87,26 +88,26 @@
     </ul>
   </nav>
 
-	<div id="main" role="main">
+  <div id="main" role="main">
     {{ content }}
-	</div>
+  </div>
 
-	<footer>
+  <footer>
 
-	</footer>
+  </footer>
 </div> <!--! end of #container -->
 
 
 <!--<script>-->
-	<!--var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']]; // Change UA-XXXXX-X to be your site's ID-->
-	<!--(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;-->
-	<!--g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';-->
-	<!--s.parentNode.insertBefore(g,s)}(document,'script'));-->
+  <!--var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']]; // Change UA-XXXXX-X to be your site's ID-->
+  <!--(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;-->
+  <!--g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';-->
+  <!--s.parentNode.insertBefore(g,s)}(document,'script'));-->
 <!--</script>-->
 
 <!--[if lt IE 7 ]>
-	<script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.2/CFInstall.min.js"></script>
-	<script>window.attachEvent("onload",function(){CFInstall.check({mode:"overlay"})})</script>
+  <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.2/CFInstall.min.js"></script>
+  <script>window.attachEvent("onload",function(){CFInstall.check({mode:"overlay"})})</script>
 <![endif]-->
 
 </body>
