--- a/css/syntax.css
+++ b/css/syntax.css
@@ -58,3 +58,183 @@
 .highlight .vg { color: #008080 } /* Name.Variable.Global */
 .highlight .vi { color: #008080 } /* Name.Variable.Instance */
 .highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
+
+
+/* Solarized, stolen from Octopress output */
+
+.pre-code span, html .gist .gist-file .gist-syntax .gist-highlight pre span, .highlight code span {
+    color: #93A1A1 !important;
+}
+.pre-code span, html .gist .gist-file .gist-syntax .gist-highlight pre span, .highlight code span {
+    font-style: normal !important;
+    font-weight: normal !important;
+}
+.pre-code .c, html .gist .gist-file .gist-syntax .gist-highlight pre .c, .highlight code .c {
+    color: #586E75 !important;
+    font-style: italic !important;
+}
+.pre-code .cm, html .gist .gist-file .gist-syntax .gist-highlight pre .cm, .highlight code .cm {
+    color: #586E75 !important;
+    font-style: italic !important;
+}
+.pre-code .cp, html .gist .gist-file .gist-syntax .gist-highlight pre .cp, .highlight code .cp {
+    color: #586E75 !important;
+    font-style: italic !important;
+}
+.pre-code .c1, html .gist .gist-file .gist-syntax .gist-highlight pre .c1, .highlight code .c1 {
+    color: #586E75 !important;
+    font-style: italic !important;
+}
+.pre-code .cs, html .gist .gist-file .gist-syntax .gist-highlight pre .cs, .highlight code .cs {
+    color: #586E75 !important;
+    font-style: italic !important;
+    font-weight: bold !important;
+}
+.pre-code .err, html .gist .gist-file .gist-syntax .gist-highlight pre .err, .highlight code .err {
+    background: none repeat scroll 0 0 transparent !important;
+    color: #DC322F !important;
+}
+.pre-code .k, html .gist .gist-file .gist-syntax .gist-highlight pre .k, .highlight code .k {
+    color: #CB4B16 !important;
+}
+.pre-code .o, html .gist .gist-file .gist-syntax .gist-highlight pre .o, .highlight code .o {
+    color: #93A1A1 !important;
+    font-weight: bold !important;
+}
+.pre-code .p, html .gist .gist-file .gist-syntax .gist-highlight pre .p, .highlight code .p {
+    color: #93A1A1 !important;
+}
+.pre-code .ow, html .gist .gist-file .gist-syntax .gist-highlight pre .ow, .highlight code .ow {
+    color: #2AA198 !important;
+    font-weight: bold !important;
+}
+.pre-code .gd, html .gist .gist-file .gist-syntax .gist-highlight pre .gd, .highlight code .gd {
+    background-color: #372C34 !important;
+    color: #93A1A1 !important;
+    display: inline-block;
+}
+.pre-code .gd .x, html .gist .gist-file .gist-syntax .gist-highlight pre .gd .x, .highlight code .gd .x {
+    background-color: #4D2D33 !important;
+    color: #93A1A1 !important;
+    display: inline-block;
+}
+.pre-code .ge, html .gist .gist-file .gist-syntax .gist-highlight pre .ge, .highlight code .ge {
+    color: #93A1A1 !important;
+    font-style: italic !important;
+}
+.pre-code .gh, html .gist .gist-file .gist-syntax .gist-highlight pre .gh, .highlight code .gh {
+    color: #586E75 !important;
+}
+.pre-code .gi, html .gist .gist-file .gist-syntax .gist-highlight pre .gi, .highlight code .gi {
+    background-color: #1A412B !important;
+    color: #93A1A1 !important;
+    display: inline-block;
+}
+.pre-code .gi .x, html .gist .gist-file .gist-syntax .gist-highlight pre .gi .x, .highlight code .gi .x {
+    background-color: #355720 !important;
+    color: #93A1A1 !important;
+    display: inline-block;
+}
+.pre-code .gs, html .gist .gist-file .gist-syntax .gist-highlight pre .gs, .highlight code .gs {
+    color: #93A1A1 !important;
+    font-weight: bold !important;
+}
+.pre-code .gu, html .gist .gist-file .gist-syntax .gist-highlight pre .gu, .highlight code .gu {
+    color: #6C71C4 !important;
+}
+.pre-code .kc, html .gist .gist-file .gist-syntax .gist-highlight pre .kc, .highlight code .kc {
+    color: #859900 !important;
+    font-weight: bold !important;
+}
+.pre-code .kd, html .gist .gist-file .gist-syntax .gist-highlight pre .kd, .highlight code .kd {
+    color: #268BD2 !important;
+}
+.pre-code .kp, html .gist .gist-file .gist-syntax .gist-highlight pre .kp, .highlight code .kp {
+    color: #CB4B16 !important;
+    font-weight: bold !important;
+}
+.pre-code .kr, html .gist .gist-file .gist-syntax .gist-highlight pre .kr, .highlight code .kr {
+    color: #D33682 !important;
+    font-weight: bold !important;
+}
+.pre-code .kt, html .gist .gist-file .gist-syntax .gist-highlight pre .kt, .highlight code .kt {
+    color: #2AA198 !important;
+}
+.pre-code .n, html .gist .gist-file .gist-syntax .gist-highlight pre .n, .highlight code .n {
+    color: #268BD2 !important;
+}
+.pre-code .na, html .gist .gist-file .gist-syntax .gist-highlight pre .na, .highlight code .na {
+    color: #268BD2 !important;
+}
+.pre-code .nb, html .gist .gist-file .gist-syntax .gist-highlight pre .nb, .highlight code .nb {
+    color: #859900 !important;
+}
+.pre-code .nc, html .gist .gist-file .gist-syntax .gist-highlight pre .nc, .highlight code .nc {
+    color: #D33682 !important;
+}
+.pre-code .no, html .gist .gist-file .gist-syntax .gist-highlight pre .no, .highlight code .no {
+    color: #B58900 !important;
+}
+.pre-code .nl, html .gist .gist-file .gist-syntax .gist-highlight pre .nl, .highlight code .nl {
+    color: #859900 !important;
+}
+.pre-code .ne, html .gist .gist-file .gist-syntax .gist-highlight pre .ne, .highlight code .ne {
+    color: #268BD2 !important;
+    font-weight: bold !important;
+}
+.pre-code .nf, html .gist .gist-file .gist-syntax .gist-highlight pre .nf, .highlight code .nf {
+    color: #268BD2 !important;
+    font-weight: bold !important;
+}
+.pre-code .nn, html .gist .gist-file .gist-syntax .gist-highlight pre .nn, .highlight code .nn {
+    color: #B58900 !important;
+}
+.pre-code .nt, html .gist .gist-file .gist-syntax .gist-highlight pre .nt, .highlight code .nt {
+    color: #268BD2 !important;
+    font-weight: bold !important;
+}
+.pre-code .nx, html .gist .gist-file .gist-syntax .gist-highlight pre .nx, .highlight code .nx {
+    color: #B58900 !important;
+}
+.pre-code .vg, html .gist .gist-file .gist-syntax .gist-highlight pre .vg, .highlight code .vg {
+    color: #268BD2 !important;
+}
+.pre-code .vi, html .gist .gist-file .gist-syntax .gist-highlight pre .vi, .highlight code .vi {
+    color: #268BD2 !important;
+}
+.pre-code .nv, html .gist .gist-file .gist-syntax .gist-highlight pre .nv, .highlight code .nv {
+    color: #268BD2 !important;
+}
+.pre-code .mf, html .gist .gist-file .gist-syntax .gist-highlight pre .mf, .highlight code .mf {
+    color: #2AA198 !important;
+}
+.pre-code .m, html .gist .gist-file .gist-syntax .gist-highlight pre .m, .highlight code .m {
+    color: #2AA198 !important;
+}
+.pre-code .mh, html .gist .gist-file .gist-syntax .gist-highlight pre .mh, .highlight code .mh {
+    color: #2AA198 !important;
+}
+.pre-code .mi, html .gist .gist-file .gist-syntax .gist-highlight pre .mi, .highlight code .mi {
+    color: #2AA198 !important;
+}
+.pre-code .s, html .gist .gist-file .gist-syntax .gist-highlight pre .s, .highlight code .s {
+    color: #2AA198 !important;
+}
+.pre-code .sd, html .gist .gist-file .gist-syntax .gist-highlight pre .sd, .highlight code .sd {
+    color: #2AA198 !important;
+}
+.pre-code .s2, html .gist .gist-file .gist-syntax .gist-highlight pre .s2, .highlight code .s2 {
+    color: #2AA198 !important;
+}
+.pre-code .se, html .gist .gist-file .gist-syntax .gist-highlight pre .se, .highlight code .se {
+    color: #DC322F !important;
+}
+.pre-code .si, html .gist .gist-file .gist-syntax .gist-highlight pre .si, .highlight code .si {
+    color: #268BD2 !important;
+}
+.pre-code .sr, html .gist .gist-file .gist-syntax .gist-highlight pre .sr, .highlight code .sr {
+    color: #2AA198 !important;
+}
+.pre-code .s1, html .gist .gist-file .gist-syntax .gist-highlight pre .s1, .highlight code .s1 {
+    color: #2AA198 !important;
+}
