--- a/_layouts/html5.html
+++ b/_layouts/html5.html
@@ -64,7 +64,7 @@
         </a>
       </li>
       <li>
-        <a href="/atom.xml">
+        <a href="http://feeds.feedburner.com/davidhu">
           <span class="left">Fee</span>
           <span class="centre">d</span>
           <span class="right">&nbsp;</span>
