--- a/_layouts/html5.html
+++ b/_layouts/html5.html
@@ -25,6 +25,8 @@
   <!-- syntax highlighting CSS -->
   <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
 
+  <link rel="icon" href="/favicon.ico" >
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
   <script src="/js/highcharts.js"></script>
 </head>
