--- a/_layouts/html5.html
+++ b/_layouts/html5.html
@@ -106,6 +106,7 @@
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-26713236-1']);
   _gaq.push(['_trackPageview']);
+  _gaq.push(['_trackPageLoadTime']);
 
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
