--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: html5
 ---
 <!-- TODO: Use HTML 5 article tag. Test on IE. -->
 <article id="post">
-  <h1><a href="{{ post.url }}"> {{ page.title }} </a></h1>
+  <h1>{{ page.title }}</h1>
   <p class="meta"> {{ page.date | date_to_string }} </p>
   {{ content }}
 </article>
