--- a/css/style.css
+++ b/css/style.css
@@ -323,6 +323,17 @@ article img, article video, article .flash-video {
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.35);
 }
 
+img.maruku-png {
+  -moz-box-sizing: none;
+  border: none;
+  border-radius: none;
+  box-shadow: none;
+}
+
+.maruku-equation img.maruku-png {
+  margin-left: 30px;
+}
+
 
 /* =============================================================================
    Specific content
