bottom of nav bar ends with a gradient into white

--- a/_layouts/html5.html
+++ b/_layouts/html5.html
@@ -87,6 +87,16 @@
           <span class="right">me</span>
         </a>
       </li>
+      <li>
+        <span class="left">&nbsp;</span>
+        <span class="centre">&nbsp;</span>
+        <span class="right">&nbsp;</span>
+      </li>
+      <li>
+        <span class="left">&nbsp;</span>
+        <span class="centre gradient">&nbsp;</span>
+        <span class="right">&nbsp;</span>
+      </li>
     </ul>
   </nav>
 
