--- a/_layouts/html5.html
+++ b/_layouts/html5.html
@@ -29,6 +29,10 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="/js/highcharts.js"></script>
+
+  {% for path in page.css_paths %}
+    <link rel="stylesheet" href="{{ path }}" type="text/css" />
+  {% endfor %}
 </head>
 <body>
 
