--- a/_layouts/html5.html
+++ b/_layouts/html5.html
@@ -30,7 +30,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="/js/highcharts.js"></script>
 
-  {% for path in page.css_paths %}
+  {% for path in page.cssPaths %}
     <link rel="stylesheet" href="{{ path }}" type="text/css" />
   {% endfor %}
 </head>
