--- a/css/ideas-list.css
+++ b/css/ideas-list.css
@@ -94,9 +94,9 @@
   cursor: pointer;
 }
 
-#all-ideas .button, #all-ideas > ul > li > *:first-child {
+#all-ideas .button, #all-ideas > ul > li > :first-child {
   background: #DDD;
-  background: rgba(0, 0, 0, 0.1)
+  background: rgba(0, 0, 0, 0.1);
   background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.2) 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.2)));
   background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.2) 100%);
