add images to KA internship blog post. Thanks @spicyj for pointing out missing tau reference from transcript.

--- a/_layouts/html5.html
+++ b/_layouts/html5.html
@@ -64,7 +64,7 @@
       <li>
         <span class="left">&nbsp;</span>
         <span class="centre">v</span>
-        <span class="right">vvvv...?</span>
+        <span class="right">&nbsp;</span>
       </li>
       <li>
         <a href="http://www.linkedin.com/pub/david-hu/24/b95/431">
