add twitter account to navbar

--- a/_layouts/html5.html
+++ b/_layouts/html5.html
@@ -62,9 +62,11 @@
         </a>
       </li>
       <li>
-        <span class="left">&nbsp;</span>
-        <span class="centre">v</span>
-        <span class="right">&nbsp;</span>
+        <a href="https://twitter.com/#!/divad_12">
+            <span class="left">T</span>
+            <span class="centre">v</span>
+            <span class="right">vitter</span>
+        </a>
       </li>
       <li>
         <a href="http://www.linkedin.com/pub/david-hu/24/b95/431">
