truncate posts on home page; show disqus comment counts (TODO: styling)

--- a/_layouts/html5.html
+++ b/_layouts/html5.html
@@ -136,6 +136,19 @@
 
 </script>
 
+<!-- Disqus -->
+<script type="text/javascript">
+    var disqus_shortname = 'davidhu';
+
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function () {
+        var s = document.createElement('script'); s.async = true;
+        s.type = 'text/javascript';
+        s.src = 'http://' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+</script>
+
 <!--[if lt IE 7 ]>
   <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.2/CFInstall.min.js"></script>
   <script>window.attachEvent("onload",function(){CFInstall.check({mode:"overlay"})})</script>
