--- a/_layouts/html5.html
+++ b/_layouts/html5.html
@@ -37,6 +37,8 @@
     <!--<link rel="stylesheet" href="{{ path }}" type="text/css" />-->
   {% endfor %}
 
+  <link rel="alternate" type="application/atom+xml" href="/atom.xml">
+
 </head>
 <body>
 
