--- a/_layouts/html5.html
+++ b/_layouts/html5.html
@@ -37,7 +37,7 @@
     <!--<link rel="stylesheet" href="{{ path }}" type="text/css" />-->
   {% endfor %}
 
-  <link rel="alternate" type="application/atom+xml" href="/atom.xml">
+  <link rel="alternate" type="application/atom+xml" href="http://feeds.feedburner.com/davidhu">
 
 </head>
 <body>
