transitions on nav bar hovers

--- a/_layouts/html5.html
+++ b/_layouts/html5.html
@@ -84,7 +84,11 @@
           <span class="right">&nbsp;</span>
         </a>
       </li>
-      <li><span class="left">&nbsp;</span><span class="centre">&nbsp;</span><span class="right">&nbsp;</span></li>
+      <li class="nav-item">
+        <span class="left">&nbsp;</span>
+        <span class="centre">&nbsp;</span>
+        <span class="right">&nbsp;</span>
+      </li>
       <li>
         <a href="https://github.com/divad12">
           <span class="left">Git</span>
@@ -99,12 +103,12 @@
           <span class="right">me</span>
         </a>
       </li>
-      <li>
+      <li class="nav-item">
         <span class="left">&nbsp;</span>
         <span class="centre">&nbsp;</span>
         <span class="right">&nbsp;</span>
       </li>
-      <li>
+      <li class="nav-item">
         <span class="left">&nbsp;</span>
         <span class="centre gradient">&nbsp;</span>
         <span class="right">&nbsp;</span>
