--- a/_layouts/html5.html
+++ b/_layouts/html5.html
@@ -64,21 +64,21 @@
         </a>
       </li>
       <li>
-        <a href="https://twitter.com/#!/divad_12">
+        <a href="https://twitter.com/divad_12" target="_blank">
             <span class="left">T</span>
             <span class="centre">v</span>
             <span class="right">vitter</span>
         </a>
       </li>
       <li>
-        <a href="http://www.linkedin.com/pub/david-hu/24/b95/431">
+        <a href="http://www.linkedin.com/pub/david-hu/24/b95/431" target="_blank">
           <span class="left">Linked</span>
           <span class="centre">i</span>
           <span class="right">n</span>
         </a>
       </li>
       <li>
-        <a href="http://feeds.feedburner.com/davidhu">
+        <a href="http://feeds.feedburner.com/davidhu" target="_blank">
           <span class="left">Fee</span>
           <span class="centre">d</span>
           <span class="right">&nbsp;</span>
@@ -90,14 +90,14 @@
         <span class="right">&nbsp;</span>
       </li>
       <li>
-        <a href="https://github.com/divad12">
+        <a href="https://github.com/divad12" target="_blank">
           <span class="left">Git</span>
           <span class="centre">H</span>
           <span class="right">ub</span>
         </a>
       </li>
       <li>
-        <a href="/resume/resume.pdf">
+        <a href="/resume/resume.pdf" target="_blank">
           <span class="left">Res</span>
           <span class="centre">u</span>
           <span class="right">me</span>
