update twitter handle on homepage

--- a/_layouts/html5.html
+++ b/_layouts/html5.html
@@ -65,7 +65,7 @@
         </a>
       </li>
       <li>
-        <a href="https://twitter.com/divad_12" target="_blank">
+        <a href="https://twitter.com/divad12" target="_blank">
             <span class="left">T</span>
             <span class="centre">v</span>
             <span class="right">vitter</span>
