--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,9 @@ layout: html5
 <!-- TODO: Use HTML 5 article tag. Test on IE. -->
 <article id="post">
   <h1>{{ page.title }}</h1>
-  <p class="meta"> {{ page.date | date_to_string }} </p>
+  {% if page.date %}
+    <p class="meta"> {{ page.date | date_to_string }} </p>
+  {% endif %}
   {{ content }}
 </article>
 
