--- a/_layouts/html5.html
+++ b/_layouts/html5.html
@@ -20,7 +20,7 @@
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:600,300' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:600,300|PT+Serif:400,700,400italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/css/style.css?v=2">
 
   <!-- syntax highlighting CSS -->
