Fix up gaps in nav bar

--- a/_layouts/html5.html
+++ b/_layouts/html5.html
@@ -85,10 +85,12 @@
           <span class="right">&nbsp;</span>
         </a>
       </li>
-      <li class="nav-item">
-        <span class="left">&nbsp;</span>
-        <span class="centre">&nbsp;</span>
-        <span class="right">&nbsp;</span>
+      <li>
+        <div class="nav-item" >
+          <span class="left">&nbsp;</span>
+          <span class="centre">&nbsp;</span>
+          <span class="right">&nbsp;</span>
+        </div>
       </li>
       <li>
         <a href="https://github.com/divad12" target="_blank">
@@ -104,10 +106,12 @@
           <span class="right">me</span>
         </a>
       </li>
-      <li class="nav-item">
-        <span class="left">&nbsp;</span>
-        <span class="centre">&nbsp;</span>
-        <span class="right">&nbsp;</span>
+      <li>
+        <div class="nav-item">
+          <span class="left">&nbsp;</span>
+          <span class="centre">&nbsp;</span>
+          <span class="right">&nbsp;</span>
+        </div>
       </li>
       <li class="nav-item">
         <span class="left">&nbsp;</span>
