More styling tweaks

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,7 @@ layout: html5
   {% endif %}
   {{ content }}
 </article>
+<hr class="article-divider">
 
 <div id="disqus_thread"></div>
 <script type="text/javascript">
