more styling and nav bar tweaks

--- a/_layouts/html5.html
+++ b/_layouts/html5.html
@@ -73,9 +73,9 @@
       </li>
       <li>
         <a href="http://www.linkedin.com/pub/david-hu/24/b95/431" target="_blank">
-          <span class="left">Linked</span>
+          <span class="left">L</span>
           <span class="centre">i</span>
-          <span class="right">n</span>
+          <span class="right">nkedIn</span>
         </a>
       </li>
       <li>
