Update about page; shorten resume link

--- a/_layouts/html5.html
+++ b/_layouts/html5.html
@@ -100,7 +100,7 @@
         </a>
       </li>
       <li>
-        <a href="/resume/resume.pdf" target="_blank">
+        <a href="/resume.pdf" target="_blank">
           <span class="left">Res</span>
           <span class="centre">u</span>
           <span class="right">me</span>
